<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav_bar"
        android:layout_below="@+id/picturecheckBox5"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="37dp"
        android:layout_toEndOf="@+id/button1"
        android:text="@string/confirm"/>

    <CheckBox
        android:id="@+id/picturecheckBox1"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture1" />

    <CheckBox
        android:id="@+id/picturecheckBox5"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView5"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture5" />

    <CheckBox
        android:id="@+id/picturecheckBox4"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture4" />

    <CheckBox
        android:id="@+id/picturecheckBox3"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="284dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:text="@string/picture3" />

    <CheckBox
        android:id="@+id/picturecheckBox2"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture2" />

    <ImageView
        android:id="@+id/pictureimageView1"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pickpicture_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image1" />

    <ImageView
        android:id="@+id/pictureimageView5"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pictureimageView2"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/pictureimageView4"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image5" />

    <ImageView
        android:id="@+id/pictureimageView4"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pictureimageView1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image4" />

    <ImageView
        android:id="@+id/pictureimageView3"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pickpicture_textView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@+id/pictureimageView2"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image3" />

    <ImageView
        android:id="@+id/pictureimageView2"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pickpicture_textView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/pictureimageView1"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/colorDarkBgd"
        app:itemTextColor="@color/colorDarkText"
        app:itemIconSize="50sp"
        android:background="@color/colorWhiteBgd"
        app:menu="@menu/bottom_nav_bar" />




    <TextView
        android:id="@+id/picture_textView"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="215dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/bookbox"
        android:textAlignment="center"
        android:textColor="@color/colorPurpleTitle"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pickpicture_textView"
        android:layout_width="247dp"
        android:layout_height="25dp"
        android:layout_below="@+id/picture_textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="71dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="92dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/pickpicture"
        android:textAlignment="center"
        android:textColor="@color/colorDarkText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/pictureimageView6"
        android:layout_width="117dp"
        android:layout_height="109dp"
        android:layout_below="@+id/pictureimageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@+id/pictureimageView5"
        app:srcCompat="@drawable/ic_custom_image"
        android:contentDescription="@string/image6" />

    <CheckBox
        android:id="@+id/picturecheckBox6"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pictureimageView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="284dp"
        android:layout_marginTop="11dp"
        android:text="@string/picture6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav_bar"
        android:layout_below="@+id/picturecheckBox5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="37dp"
        android:text="@string/cancel" />

</RelativeLayout>