<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="654dp"
        android:layout_above="@id/bottom_nav_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-3dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/othersbookboxitem_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="79dp"
                android:layout_marginTop="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/bookboxitem"
                android:textColor="@color/colorPurpleTitle"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_othersbookboxitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="59dp"
                android:layout_marginTop="133dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/othersbookboxitem_imageView"
                    android:layout_width="134dp"
                    android:layout_height="134dp"
                    android:contentDescription="@string/othersbookboxitem"
                    android:padding="5dp"
                    android:src="@drawable/ic_custom_image" />

            </LinearLayout>

            <TextView
                android:id="@+id/othersbookboxitem_status_textView"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="104dp"
                android:text="@string/othersstatusavailable"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_bookboxitem"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="349dp"
                android:text="@string/title"
                android:textColor="#050505"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/othersbookboxitem_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="317dp"
                android:text="@string/othersbookboxitem_title" />

            <TextView
                android:id="@+id/author_bookboxitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="278dp"
                android:text="@string/author"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/othersbookboxitem_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="244dp"
                android:text="@string/othersbookboxitem_author" />

            <TextView
                android:id="@+id/isbn_bookboxitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="207dp"
                android:text="@string/isbn"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/othersbookboxitem_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="174dp"
                android:text="@string/othersbookboxitem_isbn" />

            <TextView
                android:id="@+id/othersbookboxitem_borrower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="133dp"
                android:text="@string/othersborrower"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/othersbookboxitem_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="98dp"
                android:text="@string/othersowner"
                android:textColor="@color/colorDarkBgd"
                android:textSize="16sp" />

            <Button
                android:id="@+id/othersbookboxitem_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="143dp"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="15dp"
                android:text="@string/request" />

            <ImageButton
                android:id="@+id/bookboxitem_imageButton"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="153dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="161dp"
                android:layout_toEndOf="@+id/othersbookboxitem_isbn"
                android:contentDescription="@string/camera"
                app:srcCompat="@drawable/ic_camera" />

            <ImageButton
                android:id="@+id/otherbook_profile_button"
                android:layout_width="46dp"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="136dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="87dp"
                android:layout_toEndOf="@+id/othersbookboxitem_owner"
                app:srcCompat="@drawable/ic_profile"
                android:contentDescription="@string/profile_button" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/colorDarkBgd"
        app:itemTextColor="@color/colorDarkText"
        app:itemIconSize="50sp"
        android:background="@color/colorWhiteBgd"
        app:menu="@menu/bottom_nav_bar" />

</RelativeLayout>